most features are almost done sequence dialog can do automatic setting by dropping first image of sequence features with labeling on sequence can be use add new dialog showing the information of this application

--- a/src/form/icon.qrc
+++ b/src/form/icon.qrc
@@ -6,5 +6,6 @@
         <file>../icon/playpause.png</file>
         <file>../icon/next.png</file>
         <file>../icon/previous.png</file>
+        <file>../icon/mark.png</file>
     </qresource>
 </RCC>
